hphp/hack/test/typecheck/construct/abstract_constructor5.php
<?hh

trait Awesome {
  abstract public function __construct();
}

class C {
  use Awesome;
}

class D extends C {
  public function __construct() {}
}
